--- a/super-comic-buttons/manifest.json
+++ b/super-comic-buttons/manifest.json
@@ -12,10 +12,10 @@
   "browser_action": {
     "default_title": "Super Comic Button",
     "default_icon": {
-      "16": "button/disabled-16.png",
-      "32": "button/disabled-32.png",
-      "64": "button/disabled-64.png",
-      "256": "button/disabled-256.png"
+      "16": "button/icon-16.png",
+      "32": "button/icon-32.png",
+      "64": "button/icon-64.png",
+      "256": "button/icon-256.png"
     },
     "default_popup": "popup.html"
   },
@@ -42,10 +42,10 @@
 
   "sidebar_action": {
     "default_icon": {
-      "16": "button/menu-16.png",
-      "32": "button/menu-32.png",
-      "64": "button/menu-64.png",
-      "256": "button/menu-256.png"
+      "16": "button/icon-16.png",
+      "32": "button/icon-32.png",
+      "64": "button/icon-64.png",
+      "256": "button/icon-256.png"
     },
     "default_title": "Super Comic Buttons: Menu",
     "default_panel": "menu.html"
