add automatic reading when active, option for how frequently

--- a/super-comic-buttons/manifest.json
+++ b/super-comic-buttons/manifest.json
@@ -33,11 +33,12 @@
   },
   
   "permissions": [
+    "alarms",
     "notifications",
     "storage",
     "tabs",
     "http://*/",
-	"https://*/"
+    "https://*/"
   ],
 
   "sidebar_action": {
