update my-array to use existing ts implementation, try to fix ts build, realise its not happening

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,15 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "sourceMap": true,
-        "sourceRoot": "./scripts",
+        "sourceRoot": "./",
         "strictNullChecks": true,
-        "target": "es2017"
-    }
+        "target": "es2017",
+        "typeRoots": [
+            "node_modules/@types",
+            "node_modules/web-ext-types"
+        ]
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
