fix build, create interfaces, update popup to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
     "compileOnSave": true,
     "compilerOptions": {
         "alwaysStrict": true,
-        "outDir": "./super-comic-buttons",
+        "outDir": "./",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "sourceMap": true,
-        "sourceRoot": "./",
+        "sourceRoot": "./scripts",
         "strictNullChecks": true,
         "target": "es2017",
         "typeRoots": [
