lets call this done, remove source maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
         "strictPropertyInitialization": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
-        "sourceMap": true,
-        "sourceRoot": "./scripts",
+        "sourceMap": false,
         "strictNullChecks": true,
         "target": "esnext",
         "typeRoots": [
